도커 컴포즈

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ out/
 
 ### VS Code ###
 .vscode/
+
+
+
+# application.properties ignore
+/src/main/resources/application.properties
+/src/main/resources/*.yml
