--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,24 @@
 version: '3.8'
-
 services:
-
-  # MySQL 데이터베이스 서비스 정의
-  db:
-    image: mysql
-    environment:
-      MYSQL_DATABASE: 'streaming'
-      MYSQL_ROOT_PASSWORD: 'mysql'
-    ports:
-      - "3306:3306"
-    healthcheck:
-      test: ["CMD-SHELL", "mysqladmin ping -h localhost -u root -pmysql && sleep 5"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
-      start_period: 15s
-    volumes:
-      - mysql-data:/var/lib/mysql
-    networks:
-      - spring-network
-
-  # 스프링 애플리케이션 서비스 정의
-  app:
-    build: .
-    image: streaming
-    container_name: streaming
-    environment:
-      DB_URL: jdbc:mysql://db:3306/streaming
-      DB_USERNAME: root
-      DB_PASSWORD: mysql
-    ports:
-      - "8080:8080"
-    networks:
-      - spring-network
+  myapp:
+    build:
+      context: .
+      dockerfile: Dockerfile
     depends_on:
       db:
         condition: service_healthy
+    ports:
+      - "8080:8080"
 
-volumes:
-  mysql-data:
-
-networks:
-  spring-network:
-    driver: bridge
+  db:
+    image: mysql:8.0
+    container_name: mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: mysql
+      MYSQL_DATABASE: streaming
+    ports:
+      - "3306:3306"
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost -u root -p1234 && sleep 5"]
+      interval: 5s
+      retries: 10
