--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,14 @@ spring.application.name=streaming
 # ?????? ??
 spring.datasource.url=jdbc:mysql://localhost:3306/streaming
 spring.datasource.username=root
-spring.datasource.password=mysql
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=mysql1234
 
 # JPA ??
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 
 
 # JWT ??
