--- a/build.gradle
+++ b/build.gradle
@@ -37,12 +37,17 @@ dependencies {
     //
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    // .env 파일 읽기 위한 라이브러리
+    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
+
     // log4j
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
     implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    implementation 'io.lettuce:lettuce-core' // Redis client
 
 
     compileOnly 'org.projectlombok:lombok'
